--- a/FP_DockingSndFX/FP_DockingSndFX.csproj
+++ b/FP_DockingSndFX/FP_DockingSndFX.csproj
@@ -61,6 +61,9 @@
     <Compile Include="DockingSounds.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ChangeLog" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
