--- a/FP_DockingSndFX/FP_DockingSndFX.csproj
+++ b/FP_DockingSndFX/FP_DockingSndFX.csproj
@@ -65,6 +65,9 @@
     <None Include="ChangeLog" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(TargetDir)$(TargetFileName)" "$(SolutionDir)GameData\FP_DPSoundFX\Plugins" /y /d</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
